--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -257,7 +257,7 @@
 <!-- Publicity Box -->
 <ng-template #publicityBox let-modal>
 	<div class="modal-header">
-		<h4 class="modal-title">Create Email Alert</h4>
+		<h4 class="modal-title">Publicity</h4>
  		<div class="filter-close-box" (click)="closeModal()">X</div>
 	</div>
 	<div class="feedbackBox;">
