--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -87,13 +87,13 @@
 	        					<div style="float:left; min-width:300px; margin-top:20px;">
 	        						<h1 *ngIf="isMobile" class="listing-view-title">{{selectedListing.title}}</h1>
 	        						<div class="left-box">
-	        							<div>
+	        							<div class="photo">
 	        								<img class="profile-photo-details" *ngIf="recruiterProfile?.profilePhoto?.imageBytes" id='base64image' src='data:image/jpeg;base64, {{recruiterProfile?.profilePhoto?.imageBytes}}' />
 											<div *ngIf="!recruiterProfile?.profilePhoto?.imageBytes && !isMobile" class="profile-photo-details material-icons person ">
 												<span style="font-size:300px;color:green;">person</span>
 											</div>
 	        							</div>
-	        							<div class="left-box">
+	        							<div>
 	        								<h5>Recruiter Details</h5>
 	        								<div class="left-box-body">
 		        								<table>
