--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -84,7 +84,7 @@
 							
 					
 							<div>
-	        					<div style="float:left; min-width:300px; margin-top:20px;">
+	        					<div style="float:left; width:100%; min-width:320px; max-width:360px; margin-top:20px;">
 	        						<h1 *ngIf="isMobile" class="listing-view-title">{{selectedListing.title}}</h1>
 	        						<div class="left-box">
 	        							<div class="photo">
@@ -168,7 +168,7 @@
 	        						</div>
 	        					</div>
 	        			
-	        					<div style="float:left;margin-left:10px;min-width:300px;max-width:72%;padding:5px;">
+	        					<div class="desc-body">
 	        							<div class="listing-view-div">
 											<h1 *ngIf="!isMobile" class="listing-view-title">{{selectedListing.title}}</h1>
 											<h1 *ngIf="isMobile" class="listing-view-title">Description</h1>
