Login stats ordering and filtering

--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -49,7 +49,7 @@
 				</div>
 							
 				<div class="chart-wrapper">
-					<h3>Recruiter logins</h3>
+					<h3>logins: Recruiters: {{loginCountRecruiter}} Candidates: {{loginCountCandidate}}</h3>
 					<button (click)="switchUserStats('today')">Today</button>
 					<button (click)="switchUserStats('week')">Week</button>
 					<canvas baseChart 
