--- a/recruit-gui/src/app/recruiter-stats/recruiter-stats.component.html
+++ b/recruit-gui/src/app/recruiter-stats/recruiter-stats.component.html
@@ -1,71 +1,109 @@
 <div class=".container m-2">
 	<div>
+	
+		<!-- Action Buttons -->
 		<div class="action-buttons">
 			<button class="btn btn-secondary btnRight" (click)="refreshData()">Refresh</button>
 		</div>
-		<div class="chart-data-panel-page">	
-				
+	
+		<!-- Menu -->
+		<div>
 			<ul class="nav nav-tabs">
 			  <li class="nav-item">
-			    <span class="nav-link statsChartTab" (click)="switchTab('jobboard')">Job Board Statistics</span>
+			  	<span class="nav-link statsChartTab" (click)="switchTab('general-stats')">General Statistics</span>
+			  </li>
+			  <li>
+			  	<span class="nav-link statsChartTab" (click)="switchTab('jobboard-stats')">Job Board Statistics</span>
 			  </li>
 			</ul>
-			
-			<div *ngIf="listingStatistics.listingStats.length == 0" class="no-posts">
-				<h2>Job board statistics</h2>
-				<p>
-				To view statistics you will need to create at least on post on the Job board
-				</p>
-				<p>
-				To add a post to the job board you can either enter the information manually or use the 'Create From Job Spec' feature. 
-				This will scan a job description file in either Word or PDF format up to 1MB in size and automatically generate the post. 
-				You will simply need to verify that details are correct and publish the post.  
-				</p>
-				<p>
-				Posts on the job board allow site visitors to contact you directly. Posts are also shared in an external network of 20,000+ connections 
-				to attract as many candidates as possible
-				</p>
-				<p>
-				When you view your own posts you can use the 'Publish' button to generate a message to copy and paste on social media which contains the hashtags for the 
-				skills selected in your post. 
-				</p>
-			
-			</div>
+		</div>
+		
+		<!-- Main panel -->
+		<div class="chart-data-panel-page">	
 				
-			<div *ngIf="listingStatistics.listingStats.length > 0">	
-				
-				<div class="chart-panel listing-filter-panel">
-				
+			<!--  General stat's -->
+			<div *ngIf="currentTab == 'general-stats'">
+				<div class="chart-panel">
+					<h5>Totals:</h5>
 					<table>
-						<thead>
-							<tr>
-								<th>
-									Filter by Post
-								</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr *ngFor="let ls of listingStatistics.listingStats" (click)="switchListing(ls.listingId)">
-								<td *ngIf="ls.listingId == selectedListing" class="selectedListing">{{ls.title}}</td>
-								<td *ngIf="ls.listingId != selectedListing">{{ls.title}}</td>
-							</tr>
-						</tbody>
+						<tr>
+							<td>Active Users</td>
+							<td>{{totalNumberActiveCandidates}}</td>
+						</tr>
 					</table>
 				</div>
-				 
 				<div class="chart-panel">
-					<h3>{{listingViewsChart.chartTitle}}</h3>
-					<canvas baseChart 
-			  				[datasets]="listingViewsChart.chartData" 
-			  				[labels]="listingViewsChart.chartLabels" 
-			  				[options]="listingViewsChart.chartOptions"
-			  				[colors]="listingViewsChart.chartColors" 
-			  				[legend]="listingViewsChart.chartLegend" 
-			  				[chartType]="listingViewsChart.chartType" 
-			 			 	[plugins]="listingViewsChart.chartPlugins">
-				 </canvas>
+					<h5>Available by Function</h5>
+ 						<canvas baseChart 
+     						[datasets]="availabilityChart.chartData" 
+     						[labels]="availabilityChart.chartLabels" 
+     						[options]="availabilityChart.chartOptions"
+     						[colors]="availabilityChart.chartColors" 
+     						[legend]="availabilityChart.chartLegend" 
+     						[chartType]="availabilityChart.chartType" 
+     						[plugins]="availabilityChart.chartPlugins">
+  					</canvas>
+				</div>	
+			</div>
+			
+			<!-- Job board stats -->
+			<div *ngIf="currentTab == 'jobboard-stats'">
+				<div *ngIf="listingStatistics.listingStats.length == 0" class="no-posts">
+					<h2>Job board statistics</h2>
+					<p>
+					To view statistics you will need to create at least on post on the Job board
+					</p>
+					<p>
+					To add a post to the job board you can either enter the information manually or use the 'Create From Job Spec' feature. 
+					This will scan a job description file in either Word or PDF format up to 1MB in size and automatically generate the post. 
+					You will simply need to verify that details are correct and publish the post.  
+					</p>
+					<p>
+					Posts on the job board allow site visitors to contact you directly. Posts are also shared in an external network of 20,000+ connections 
+					to attract as many candidates as possible
+					</p>
+					<p>
+					When you view your own posts you can use the 'Publish' button to generate a message to copy and paste on social media which contains the hashtags for the 
+					skills selected in your post. 
+					</p>
+				
 				</div>
-			</div>	
+					
+				<div *ngIf="listingStatistics.listingStats.length > 0">	
+					
+					<div class="chart-panel listing-filter-panel">
+					
+						<table>
+							<thead>
+								<tr>
+									<th>
+										Filter by Post
+									</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr *ngFor="let ls of listingStatistics.listingStats" (click)="switchListing(ls.listingId)">
+									<td *ngIf="ls.listingId == selectedListing" class="selectedListing">{{ls.title}}</td>
+									<td *ngIf="ls.listingId != selectedListing">{{ls.title}}</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					 
+					<div class="chart-panel">
+						<h3>{{listingViewsChart.chartTitle}}</h3>
+						<canvas baseChart 
+				  				[datasets]="listingViewsChart.chartData" 
+				  				[labels]="listingViewsChart.chartLabels" 
+				  				[options]="listingViewsChart.chartOptions"
+				  				[colors]="listingViewsChart.chartColors" 
+				  				[legend]="listingViewsChart.chartLegend" 
+				  				[chartType]="listingViewsChart.chartType" 
+				 			 	[plugins]="listingViewsChart.chartPlugins">
+					 </canvas>
+					</div>
+				</div>	
+			</div>
 		</div>
 	</div>
 </div>
